# nik3dsim

./: .gitignore  CMakeLists.txt
examples/test/: CMakeLists.txt  main.cpp
examples/test_box_plane_collider_bench/: CMakeLists.txt  main.cpp
examples/test_capsule_aabb_collider_bench/: CMakeLists.txt  main.cpp
examples/test_capsule_box_collider/: CMakeLists.txt  main.cpp
examples/test_capsule_box_collider_bench/: CMakeLists.txt  main.cpp
examples/test_capsule_box_plane_collider_bench/: CMakeLists.txt  main.cpp
examples/test_cloth/: CMakeLists.txt  main.cpp
examples/test_collision_bench/: CMakeLists.txt  main.cpp
examples/test_contact/: CMakeLists.txt  main.cpp
examples/test_contact_box_plane/: CMakeLists.txt  main.cpp
examples/test_contact_box_rolling/: CMakeLists.txt  main.cpp
examples/test_contact_capsule/: CMakeLists.txt  main.cpp
examples/test_contact_dynamic_friction/: main.cpp
examples/test_contact_rolling/: CMakeLists.txt  main.cpp
examples/test_contact_sphere_sphere/: CMakeLists.txt  main.cpp
examples/test_contact_static_friction/: CMakeLists.txt  main.cpp
examples/test_hinge/: CMakeLists.txt  main.cpp
examples/test_hinge copy/: main.cpp
examples/test_positional/: CMakeLists.txt  main.cpp
examples/test_positional_bench/: CMakeLists.txt  main.cpp
examples/test_softbody/: CMakeLists.txt  main.cpp
examples/test_sphere_box_collider/: CMakeLists.txt  main.cpp
lib/nik3dsim/: CMakeLists.txt
lib/nik3dsim/include/: nik3dsim.h
lib/nik3dsim/src/: colliders.cpp  colliders.hpp  forward.cpp  forward.hpp  math.cpp  math.hpp  render.cpp  render.hpp  types.hpp
